package server;

public class UnknownValueException extends Exception {

	public UnknownValueException(String message) {
		super(message);
	}
}
